--- a/pelazem.util/pelazem.util.csproj
+++ b/pelazem.util/pelazem.util.csproj
@@ -9,6 +9,7 @@
     <Authors>Patrick El-Azem</Authors>
     <Company />
     <Description>A small .NET Standard common utility library. Some collection and reflection extension methods, a safer number converter, type functionality (such as easily getting all properties defined on a type), etc.</Description>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
