--- a/pelazem.util/pelazem.util.csproj
+++ b/pelazem.util/pelazem.util.csproj
@@ -3,16 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <SignAssembly>True</SignAssembly>
-    <DelaySign>False</DelaySign>
-    <AssemblyOriginatorKeyFile>pelazem.snk.pfx</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
+    <AssemblyOriginatorKeyFile>pelazem.snk</AssemblyOriginatorKeyFile>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <Authors>Patrick El-Azem</Authors>
+    <Authors>Patrick El-Azem (www.linkedin.com/in/pelazem)</Authors>
     <Company />
     <Description>A small .NET Standard 2.0 common utility library. Some collection and reflection extension methods, a safer number converter, type functionality (such as easily getting all properties defined on a type), etc.</Description>
-    <Version>1.3</Version>
-    <AssemblyVersion>1.3.0.0</AssemblyVersion>
-    <FileVersion>1.3.0.0</FileVersion>
+    <Version>2.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/plzm/pelazem.util</PackageProjectUrl>
+    <PackageReleaseNotes>Version 2.0 introduces breaking changes from 1.x.
+The random number generator has been broken out to a separate project and Nuget package, pelazem.rng.
+Some constants have been removed/added from the Constants class.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
