--- a/pelazem.util/pelazem.util.csproj
+++ b/pelazem.util/pelazem.util.csproj
@@ -9,14 +9,12 @@
     <Authors>Patrick El-Azem (www.linkedin.com/in/pelazem)</Authors>
     <Company />
     <Description>A small .NET Standard 2.0 common utility library. Some collection and reflection extension methods, a safer number converter, type functionality (such as easily getting all properties defined on a type), etc. See project site for details and code.</Description>
-    <Version>2.6.0</Version>
-    <AssemblyVersion>2.6.0.0</AssemblyVersion>
-    <FileVersion>2.6.0.0</FileVersion>
+    <Version>3.0.2</Version>
+    <AssemblyVersion>3.0.2.0</AssemblyVersion>
+    <FileVersion>3.0.2.0</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/plzm/pelazem.util</PackageProjectUrl>
-    <PackageReleaseNotes>Version 2 introduces breaking changes from 1.x.
-The random number generator has been broken out to a separate project and Nuget package, pelazem.rng.
-Some constants have been removed/added from the Constants class.</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <RepositoryUrl>https://github.com/plzm/pelazem.util</RepositoryUrl>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
